Added google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ name: rohit saxena
 markdown: redcarpet
 pygments: true
 permalink: /scribbles/:title
+analytics :
+  provider : google
+  google : 
+      tracking_id : 'UA-907966-2'
